@@ -1,3 +1,9 @@
+2009-07-17  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php:
+	- Drop dashboard widget, which is not very useful.
+	- Only add javascript to ScoreRender option page but not others.
+
 2009-05-26  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php (scorerender_get_def_settings):
